--- a/css/temp.css
+++ b/css/temp.css
@@ -974,7 +974,7 @@ input {
   }
   
   .footer .footer-content .footer-links {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
   
   .footer .footer-content .footer-links ul {
@@ -984,7 +984,7 @@ input {
   }
   
   .footer .footer-content .footer-links ul li {
-    padding: 8px 0;
+    padding: 1px 0;
   }
   
   .footer .footer-content .footer-links ul li:first-child {
@@ -1031,13 +1031,14 @@ input {
 .sidebar .sidebar-card .sidebar-title h2 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-transform: uppercase;
-    font-size: 32px;
+    font-size: 44px;
     font-weight: bold;
-    line-height: 36px;
-    background-color: rgba(190, 176, 24, 0.1);
-    color: #080808;
+    line-height: 50px;
+    background-color: rgba(181, 132, 35, 0.1);
+    color: #252424;
     border-radius: 12px;
-    box-shadow: 2px 3px 6px 2px rgb(216, 216, 216);
+    box-shadow: 3px 8px 22px 4px rgba(86, 17, 17, 0.2);
+    border: .1px solid rgba(2, 2, 2, 0.2);
     margin-top: 38px;
     margin: 38px auto 48px auto;
     padding: 28px 10px 20px 10px;
@@ -1045,21 +1046,22 @@ input {
     text-align: center;
 }
 .sidebar .sidebar-card .sidebar-title h2 span {
-    font-size: 38px;
+    font-size: 48px;
     font-weight: bold;
-    line-height: 42px;
-    letter-spacing: 1.2px;
+    line-height: 50px;
+    letter-spacing: 1.3px;
     font-style: italic;
     color: rgb(163, 30, 30);
 }
 
 .sidebar .sidebar-card .sidebar-info p {
     /* background-color: aqua; */
-    font-family: 'Special Elite', cursive;
+    font-family: 'Special Elite', Arial, Helvetica, sans-serif;
+    color: #2d2b2b;
     letter-spacing: 1.03px;
-    line-height: 34px;
-    font-size: 18px;
-    font-weight: 700;
+    line-height: 38px;
+    font-size: 20px;
+    font-weight: 800;
     padding: 32px 9px 40px 9px;
     text-align: center;
 
@@ -1079,29 +1081,42 @@ input {
 }
 .ad .ad-card .ad-title h2 {
     /* font-family: "Roboto", Sans-serif; */
-    font-family: 'Special Elite', cursive;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-transform: uppercase;
-    font-size: 32px;
+    font-size: 40px;
     font-weight: bold;
-    line-height: 36px;
-    background-color: rgba(163, 30, 30, .1);
-    color: #080808;
+    line-height: 60px;
+    background-color: rgba(181, 132, 35, 0.1);
+    color: #040404;
     border-radius: 12px;
-    box-shadow: 2px 3px 6px 2px rgb(216, 216, 216);
+    box-shadow: 3px 8px 22px 4px rgba(86, 17, 17, 0.2);
+    border: .1px solid rgba(2, 2, 2, 0.2);
     margin-top: 38px;
     margin: 38px auto 48px auto;
-    padding: 28px 10px 20px 10px;
+    padding: 28px 10px 30px 10px;
     max-width: 350px;
     text-align: center;
 }
 .ad .ad-card .ad-info p {
     /* background-color: aqua; */
     /* font-family: "Roboto", Sans-serif; */
-    font-family: "Roboto", Sans-serif;
-    line-height: 34px;
+    font-family: 'Special Elite', Arial, Helvetica, sans-serif;
+    letter-spacing: 1.03px;
+    color: #2d2b2b;
+    line-height: 38px;
     font-size: 18px;
-    padding: 32px 8px 40px 8px;
+    font-weight: 700;
+    padding: 32px 9px 40px 9px;
     text-align: center;
+}
+.ad .ad-card .ad-title h2 span {
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 50px;
+    letter-spacing: 1.3px;
+    font-style: italic;
+    border-bottom: 3px solid rgba(129, 26, 26, .8);
+    color: rgb(163, 30, 30);
 }
 .ad .ad-card .ad-img {
     padding-top: 20px;
