about page, icons

--- a/css/temp.css
+++ b/css/temp.css
@@ -1135,4 +1135,11 @@ input {
     margin: 0 auto 0 auto;
 }
  /* ======== SIDEBAR END/ ========= */
+
+
+
+ /* =========== MODAL ============= */
+ 
+
+  /* ======== MODAL END/ ========== */
  
