--- a/css/temp.css
+++ b/css/temp.css
@@ -49,7 +49,7 @@
     font-size: 16px;
     letter-spacing: 1.1px;
     padding: 10px 18px;
-    border-radius: 10px;
+    border-radius: 5px;
     border: 3px solid var(--bg-primary);
     color: white;
     text-decoration: none;
@@ -67,7 +67,7 @@
     font-size: 16px;
     letter-spacing: 1.1px;
     padding: 10px 18px;
-    border-radius: 10px;
+    border-radius: 5px;
     border: 3px solid var(--bg-primary);
     background-color: rgb(163, 30, 30);
     color: rgb(255, 255, 255);
@@ -76,9 +76,9 @@
     transition: 0.2s;
 }
 .btn-outline:hover {
-    background-color: rgba(121, 13, 13, 1);
+    background-color: rgb(143, 25, 25);
     border: 3px solid rgb(162, 35, 35);
-    color: rgb(168, 168, 168);
+    color: rgb(229, 229, 229);
 }
 
 * {
@@ -638,7 +638,7 @@ input {
     height: auto;
     /* background: linear-gradient(to bottom, rgba(228, 3, 3, 0.1) 0%, rgba(248, 89, 3, 0.1) 100%), url("../assets/logo/--bg-truck.png") center; */
     background-size: cover;
-    background: linear-gradient(rgb(11, 11, 11) 0%, rgba(0, 0, 0, 0.8) 60%);
+    background: linear-gradient(rgb(11, 11, 11) 0%, rgba(0, 0, 0, 0.8) 20%), top;
     font-size: 14px;
     padding: 20px 0 30px 0;
     position: relative;
@@ -677,16 +677,23 @@ input {
 /* ===== CONNECT FORM =============*/
 .connect-container {
     box-sizing: border-box;
-    margin: 2px auto 10px auto;
-    border: 2px solid #333;
+    margin: 12px auto 20px auto;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    
+    justify-content: space-between;
+
+}
+@media (min-width: 1100px) {
+    .connect-container {
+        max-width: 80vw;
+    }
+}
+.jotform-form .form-all {
+   margin: 0 auto 0 auto;
 }
 .connect-heading {
-    padding: 50px 10px 0px 10px;
+    /* padding: 2px 10px 0px 10px; */
     margin: 0 auto 0 auto;
     width: 70vw;
 }
@@ -697,7 +704,7 @@ input {
 }
 .connect-container .connect-heading img {
    width: 200px; 
-   margin: 0px auto 0px auto;
+   margin: 0px auto 0 auto;
 }
 .connect-container .connect-heading h1 {
     color: var(--bg-primary);
@@ -706,14 +713,14 @@ input {
 }
 .connect-container .connect-heading p {
     text-align: center;
-    padding-left: 20px;
+    margin-right: 5px;
 }
 .connect-container .connect-heading .connect-content {
     display: flex;
     flex-direction: column;
 }
 
-@media (min-width: 990px) {
+@media (min-width: 890px) {
     .connect-container {
         flex-direction: row;
     }
@@ -732,12 +739,10 @@ input {
     }
     .connect-container .connect-heading h1 {
         text-align: left;
-        padding-left: 100px;
         font-size: 40px;
     }
     .connect-container .connect-heading p {
         text-align: left;
-        padding-left: 100px;
     }
     .connect-container .connect-heading img {
         margin-left: 100px;
@@ -1086,6 +1091,7 @@ input {
     border: none;
 }
  /* ======== SIDEBAR END/ ========= */
+
  
 
  /* =============== AD ============ */
@@ -1138,40 +1144,69 @@ input {
     vertical-align: top;
     margin: 0 auto 0 auto;
 }
- /* ============ AD END/ ========= */
+/* ============ AD END/ ========= */
+.about {
+    background-color: #9d950b;
+}
+.about-card {
+    background-color: #c5c5c5;
+    width: 60vw;
+}
+
+/* =========== ABOUT ============= */ 
 
 
+/* ========= ABOUT END/ ========== */
 
- /* =========== MODAL ============= */
 
+/* =========== MODAL ============= */
+.modal .modal-content {
+    background-color: #e4e3e3;
+}
 .modal-content .modal-header {
     background-color: rgb(163, 30, 30);
+    border-bottom: 1px solid rgb(88, 18, 18);
+    box-shadow: 0px 2px 2px rgb(88, 18, 18);
+
 }
 .modal-content .modal-header .modal-title {
-    font-weight: 500;
+    font-weight: 400;
     font-family: "Roboto", Sans-serif;
-    margin: 0 0 4px 5px;
+    margin: 0 0 1px 5px;
     padding-bottom: 0px;
-    font-size: 22px;
+    font-size: 20px;
     display: inline-block;
     text-transform: uppercase;
     color: #fff;
     border-bottom: 3px solid rgb(163, 30, 30);
     transition: 0.3s;
  }
+ .modal-content .modal-header button {
+    border: none;
+    border-radius: 2px;
+    background-color: #e4e3e3;
+ }
 .modal-content .modal-body .schedule-message h5 {
     font-family: "Roboto", Sans-serif;
-    margin: 0 0 4px 0;
+    margin: 0 0 2px 0;
     padding-bottom: 0px;
-    font-size: 24px;
+    font-size: 19px;
  }
 .modal-content .modal-body .schedule-message a {
     font-family: "Roboto", Sans-serif;
-    padding-bottom: 8px 16px 8px 16px;
-    font-size: 18px;
+    padding-bottom: 8px 16px 2px 16px;
+    font-size: 17px;
     color: white;
-    
  }
+ /* .modal-content .modal-footer {
+    background-color: #b4b4b4;
+    border-top: 1px solid rgb(120, 120, 120);
+    box-shadow: 3px 2px 2px rgb(110, 110, 110);
+ } */
+ .modal-content .modal-footer button {
+    padding: 4px 22px 4px 22px;
+    margin: 0px 0px 0px auto;
 
+ }
   /* ======== MODAL END/ ========== */
  
