--- a/css/temp.css
+++ b/css/temp.css
@@ -27,6 +27,9 @@
     --wrapper-height: auto;
     --footer-height: 50px;
 }
+body {
+    font-family: 'Montserrat', sans-serif;
+}
 .bg-main {
     background-color: rgba(163, 30, 30, 1);
 }
@@ -658,6 +661,7 @@ input {
     font-weight: bold;
     text-transform: uppercase;
     color: rgb(244, 239, 239);
+    /* width: 100vw; */
 }
  
 .mini-masthead .mini-container h3 {
@@ -669,6 +673,12 @@ input {
     font-size: 1em;
     font-style: italic;
 }
+/* @media (min-width: 990px) {
+    .mini-masthead .mini-container {
+        width: 90vw;
+        margin: 0 auto 0 auto;
+    }
+} */
   
   
 /* ===== MINI MASTHEAD END/============*/
@@ -891,26 +901,6 @@ input {
 /* ===== SERVICES END/ ===== */
 
 
-/* ====== CONTACT ========  */
-.content {
-    display: block
-}
-
-@media (min-width: 600px) {
-    .content {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }  
-}
-.contact {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* background-color: aqua; */
-    width: 100%;
-}
-
-/* ==== CONTACT END/========  */
   
 /* ======= FOOTER  ===== */
   .footer {
@@ -1145,6 +1135,8 @@ input {
     margin: 0 auto 0 auto;
 }
 /* ============ AD END/ ========= */
+
+/* =========== ABOUT ============= */ 
 .about {
     background-color: #9d950b;
 }
@@ -1152,11 +1144,111 @@ input {
     background-color: #c5c5c5;
     width: 60vw;
 }
-
-/* =========== ABOUT ============= */ 
-
-
 /* ========= ABOUT END/ ========== */
+
+
+
+/* ====== CONTENT ========  */
+/* repsonsive  */
+.content-about {
+    display: block
+}
+
+@media (min-width: 875px) {
+    .content-about {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }  
+}
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* background-color: aqua; */
+    width: 100%;
+}
+@media (min-width: 600px) {
+    .content-about {
+        width: 90vw;
+        margin: 0 auto 0 auto;
+    }
+    .contact-container {
+        width: 64vw;
+        margin: 5px auto 0 auto;
+        border: 0px solid rgb(8, 226, 62);
+    }
+}
+.contact {
+    border: 0px solid pink;
+}
+.contact-container {
+    width: 95%;
+    margin-top: 5px;
+}
+@media (max-width: 877px) {
+    .contact-container {
+        width: 83vw;
+        margin: 5px auto 0 auto;
+        border: 0px solid rgb(8, 226, 62);
+    }
+}
+.contact-container .contact-card {
+    border: 0px solid pink;
+}
+.contact-container .contact-card .card-info {
+    margin: 1px;
+} 
+.contact-container .contact-card .card-info h3 {
+    font-size: 26px;
+    margin-left: 12px;
+    font-weight: 500;
+}
+.contact-container .contact-card .card-info span {
+    margin-right: 18px;
+    margin-top: 8px;
+}
+.contact-container .contact-card .card-info span i {
+    font-size: 26px;
+    color: rgb(163, 30, 30);
+}
+.contact-container .contact-card .card-info p {
+    margin-left: 62px;
+}
+.contact-container .contact-card .card-info ul {
+    list-style: none;
+}
+.contact-container .contact-card .card-info ul  li {
+    margin-left: 29px;
+}
+/* payments split  */
+.contact-container .contact-group {
+    max-width: 100%;
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+.contact-group .card-title {
+    max-width: 300px;
+    height: 150px;
+}
+.contact-group .card-img {
+    width: 150px;
+    height: 110px;
+    margin: 0 auto 3px auto;
+}
+
+
+
+
+
+
+
+
+
+/* ==== CONTENT END/========  */
 
 
 /* =========== MODAL ============= */
@@ -1183,7 +1275,7 @@ input {
  }
  .modal-content .modal-header button {
     border: none;
-    border-radius: 2px;
+    border-radius: 0;
     background-color: #e4e3e3;
  }
 .modal-content .modal-body .schedule-message h5 {
@@ -1208,5 +1300,57 @@ input {
     margin: 0px 0px 0px auto;
 
  }
-  /* ======== MODAL END/ ========== */
- 
+/* ======== MODAL END/ ========== */
+
+
+
+/* ======= CONNECT WIDGET ========  */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 99999; 
+    padding-top: 8px;
+    left: 0;
+    bottom: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.5); 
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0px;
+    border: 1px solid #888;
+    width: 98%;
+}
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+/* ===== CONNECT WIDGET END/ ======  */
+
+
+
+
+/* ========= JOTFORM ===============  */
+div.form-header-group.header-default {
+    background-color: rgb(163, 30, 30);
+}
+h2#header_14.form-header {
+    font-size: 20px;
+    display: inline-block;
+    text-transform: uppercase;
+    color: #fff;
+}
+/* ========= JOTFORM END/ ============  */
